# myfund-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs  models.rs  myfund.rs  server.rs
tests/fixtures/: portfolio_error.json  portfolio_ok.json
