[package]
name = "myfund-mcp"
version = "0.1.1"
edition = "2024"

[dependencies]
rmcp = { version = "0.16", features = [
    "server",
    "macros",
    "schemars",
    "transport-io",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
wiremock = "0.6"
